# Phoenix-ROS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  grub.cfg  limine.conf
include/: kserial.h  kstring.h  multiboot.h  stdio.h  vga.h
include/kstdlib/: kstring.h
src/: CMakeLists.txt  Makefile  _init.s  kernel.c  kserial.c  kstring.c  linker.ld  regdump.s  stdio.c  string.c  vga.c
src/arch/x86/: _init.S  serial.c  serial.h
src/inc/: kio.h
src/inc/x86/: bootstrap_stack.s  multiboot_header.s
src/kstdlib/: CMakeLists.txt  kstring.c
src/platform/x86_64/: platform.c  x86_64-elf.ld
src/platform/x86_64/include/: platform.h
src/sys/: io.h
src/x86/: _start.s
